# sql_playground

./: .dockerignore  .gitignore  README.md  basic_query.py  docker-compose.yml  dockerfile  loading_script.py  main.py  pyproject.toml  requirements.txt
app/pg_utils/: loader.py
app/scripts/: loading_script.py
pg_utils/: csv_to_pg_loader.py  update_table.py
