[project]
name = "sql-playground"
version = "1.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.8",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.9",
    "uvicorn>=0.34.2",
]
